[package]
name = "learn"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.41"
log = "0.4.22"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
duckdb = "1.1.1"
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
